# ghostref

./: .ghostref-allow  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: detection-rules.md
examples/: README.md
examples/demo_project/: GUIDE.md  inventory.py  pricing.py
scripts/: smoke.sh
src/ghostref/: __init__.py  __main__.py  baseline.py  candidates.py  cli.py  comments.py  discover.py  docparams.py  markdown.py  report.py  resolve.py  scanner.py  symbols.py  wordlists.py
tests/: conftest.py  test_baseline.py  test_candidates.py  test_cli.py  test_comments.py  test_docparams.py  test_markdown.py  test_report.py  test_resolve.py  test_scanner.py  test_selfscan.py  test_symbols.py
